{
  "common": {
    "remove": "Remove",
    "ok": "OK!",
    "cancel": "Cancel",
    "back": "Back",
    "enterHere": "Enter here",
    "add": "Add",
    "update": "Update"
  },
  "auth": {
    "goToSetting": "Go to Settings",
    "setAuth": "Set Authentication to Proceed",
...
