...
const BUTTON = {
  borderRadius: 20,
  marginTop: 20,
  marginBottom: 30,
}

export const AuthScreen: FC<StackScreenProps<NavigatorParamList, "auth">> = observer(
  function AuthScreen({ navigation }) {
    const openAppSettings = () => {
      if (Platform.OS === "ios") {
        Linking.openURL("app-settings:")
      } else {
        Linking.sendIntent("android.settings.SECURITY_SETTINGS")
...
            onPress={unlockHandler}
          >
            {translate("auth.goToSetting")}
          </Button>
          <Button
            mode="text"
            testID="GoToSettingButtonForTesting"
            style={{ opacity: 0 }}
            onPress={() => navigation.push("task")}
          >
            {""}
          </Button>
        </Screen>
...
