...
  borderWidth: 1,
}
const EMPTY_CONTAINER: ViewStyle = {
  marginTop: 10,
}

export const TaskScreen: FC<StackScreenProps<NavigatorParamList, "task">> = observer(
  function TaskScreen() {
    const navigation = useNavigation()
    const inputRef = useRef<NativeTextInput>()
    const [text, setText] = useState("")
    const [isUpdate, setIsUpdate] = useState(false)
    const [currentTaskId, setCurrentTaskId] = useState(null)
...
              returnKeyType={"done"}
              mode="flat"
              placeholder={translate("common.enterHere")}
              placeholderTextColor={color.palette.black}
            />
          </View>
          <Button mode="contained" onPress={handleSubmit} testID="SubmitButton">
            {isUpdate ? translate("common.update") : translate("common.add")}
          </Button>
        </View>
      </KeyboardAvoidingView>
    )
  },
...
